--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>481</width>
-    <height>341</height>
+    <height>404</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -20,10 +20,17 @@
       <x>250</x>
       <y>12</y>
       <width>201</width>
-      <height>161</height>
+      <height>191</height>
      </rect>
     </property>
     <layout class="QVBoxLayout" name="verticalLayout">
+     <item>
+      <widget class="QPushButton" name="useIndexButton">
+       <property name="text">
+        <string>Do not use index</string>
+       </property>
+      </widget>
+     </item>
      <item>
       <widget class="QLabel" name="label">
        <property name="text">
@@ -67,7 +74,7 @@
       <x>30</x>
       <y>10</y>
       <width>201</width>
-      <height>161</height>
+      <height>191</height>
      </rect>
     </property>
     <layout class="QVBoxLayout" name="verticalLayout_2">
@@ -90,9 +97,9 @@
     <property name="geometry">
      <rect>
       <x>30</x>
-      <y>190</y>
+      <y>210</y>
       <width>421</width>
-      <height>131</height>
+      <height>181</height>
      </rect>
     </property>
     <property name="html">
@@ -104,7 +111,9 @@ p, li { white-space: pre-wrap; }
 &lt;p style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;br /&gt;&lt;/p&gt;
 &lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;First, chose another image or keep the demo image. it must be a greyscale image. Then, launch visualisations of heightmaps corresponding to any  step of Canny algorithm.&lt;/p&gt;
 &lt;p style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;br /&gt;&lt;/p&gt;
-&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;To control the display, use &lt;span style=&quot; font-weight:600;&quot;&gt;ZQSD&lt;/span&gt; to rotate the model, arrows to rotate the light source, &lt;span style=&quot; font-weight:600;&quot;&gt;space bar&lt;/span&gt; to make the plan appear or disappear, &lt;span style=&quot; font-weight:600;&quot;&gt;RF&lt;/span&gt; to raise or lower it and &lt;span style=&quot; font-weight:600;&quot;&gt;W&lt;/span&gt; to save the current rendering as an image.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;To control the display, use &lt;span style=&quot; font-weight:600;&quot;&gt;ZQSD&lt;/span&gt; to rotate the model, arrows to rotate the light source, &lt;span style=&quot; font-weight:600;&quot;&gt;space bar&lt;/span&gt; to make the plan appear or disappear, &lt;span style=&quot; font-weight:600;&quot;&gt;RF&lt;/span&gt; to raise or lower it and &lt;span style=&quot; font-weight:600;&quot;&gt;W&lt;/span&gt; to save the current rendering as an image.&lt;/p&gt;
+&lt;p style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;br /&gt;&lt;/p&gt;
+&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;It is also possible to disable and enable the use of the index with &amp;quot;Do not use index&amp;quot; and &amp;quot;Use index&amp;quot;. disabling index could be usefull with really sharp images, such as images resulting from Canny algorithm.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
     </property>
    </widget>
   </widget>
