--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>481</width>
-    <height>423</height>
+    <height>432</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -99,7 +99,7 @@
       <x>30</x>
       <y>210</y>
       <width>421</width>
-      <height>201</height>
+      <height>211</height>
      </rect>
     </property>
     <property name="html">
@@ -113,7 +113,7 @@ p, li { white-space: pre-wrap; }
 &lt;p style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;br /&gt;&lt;/p&gt;
 &lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;To control the display, use &lt;span style=&quot; font-weight:600;&quot;&gt;ZQSD&lt;/span&gt; to rotate the model, arrows to rotate the light source, &lt;span style=&quot; font-weight:600;&quot;&gt;space bar&lt;/span&gt; to make the plan appear or disappear, &lt;span style=&quot; font-weight:600;&quot;&gt;RF&lt;/span&gt; to raise or lower it and &lt;span style=&quot; font-weight:600;&quot;&gt;W&lt;/span&gt; to save the current rendering as an image.&lt;/p&gt;
 &lt;p style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;br /&gt;&lt;/p&gt;
-&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;It is also possible to disable and enable the use of the index with &amp;quot;Do not use index&amp;quot; and &amp;quot;Use index&amp;quot;. Eanbling the index enables to get smoother lightings but disabling it could be usefull with really sharp images, such as images resulting from Canny algorithm. Moreover, setting the index takes a lot of computation time.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;It is also possible to disable and enable the use of the index with &amp;quot;Do not use index&amp;quot; and &amp;quot;Use index&amp;quot;. Eanbling the index enables to get smoother lightings and to save VRAM but disabling it could be usefull with really sharp images, such as images resulting from Canny algorithm. Moreover, setting the index takes a lot of computation time.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
     </property>
    </widget>
   </widget>
